fix other spot and aligned home

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -23,3 +23,8 @@ i {
     justify-content: left;
     width: 100%;
 }
+
+.homeSpotImage {
+    height: 24vh;
+    width: 24vw;
+}
